fixed alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,7 @@
 
 body {
   font-family: "Playwrite DE Grund", cursive;
+  background-color: rgb(57, 48, 64);
 }
 
 input {
@@ -33,24 +34,83 @@ select {
 
 .wrapper {
   position: relative;
-
   justify-content: center;
   align-items: center;
-  height: 100vh;
 }
 
 .overground {
-  position: relative;
-  height: 100vh;
   display: flex;
   justify-content: center;
+  font-family: "Caladea", serif;
   align-items: center;
-  background-color: #f0f0f0;
+  background-image: url("/assets/images/Game-Backgrounds-1.jpg");
+  background-size: cover;
+  position: relative;
+  height: 105vh;
+}
+
+.heading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 12rem;
+}
+
+.title {
+  display: flex;
+  font-size: 70px;
+  font-weight: bold;
+  color: white;
+  letter-spacing: 3px;
+  text-shadow: 5px 5px 5px rgba(18, 16, 16, 0.54);
+}
+
+.title :first-child {
+  color: rgb(244, 34, 34);
+}
+.title :last-child {
+  color: rgb(2, 177, 215);
+}
+
+.box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  width: 100%;
+  animation: bounce 2s infinite;
+}
+
+.arrow {
+  border-left: 15px solid transparent;
+  border-right: 15px solid transparent;
+  border-top: 20px solid #000;
+}
+
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-10px);
+  }
+  60% {
+    transform: translateY(-5px);
+  }
+}
+
+h6 {
+  font-size: 20px;
 }
 
 .underground {
-  z-index: -2;
   position: relative;
+  z-index: 3;
   background-image: url("../assets/images/underground.jpg");
   height: 100vh;
   background-size: cover;
@@ -110,7 +170,6 @@ select {
 .btn-start {
   z-index: 2;
   position: absolute;
-  /* bottom: -10rem; */
   transform: scale(10%);
   background-color: #898079;
   color: white;
